Update website with coffee color palette and new blog page - Remove all blue/pink colors and replace with coffee-themed colors - Add new blog page with complete styling - Update logo to custom coffee cup design - Apply consistent terracotta, sage, forest, mahogany color scheme - Fix all hero backgrounds, buttons, icons, and form elements

--- a/events.html
+++ b/events.html
@@ -13,7 +13,23 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">☕ CozyCup Café</div>
+    <div class="logo">
+      <div class="logo-icon">
+        <div class="coffee-cup">
+          <div class="cup-body"></div>
+          <div class="cup-handle"></div>
+          <div class="latte-art">
+            <div class="heart-left"></div>
+            <div class="heart-right"></div>
+            <div class="rosetta-center"></div>
+          </div>
+        </div>
+        <div class="steam steam-1"></div>
+        <div class="steam steam-2"></div>
+        <div class="steam steam-3"></div>
+      </div>
+      <span class="logo-text">CozyCup Café</span>
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,6 +37,7 @@
         <li><a href="about.html">About Us</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="events.html" class="active">Events</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
